# deidentification

./: .gitignore  LICENSE  MANIFEST.in  README.md  ano_function.py  config.py  pyproject.toml  requirement.txt  requirements.txt  setup.py
.github/workflows/: python-package.yml
deidentification/: __init__.py  aggregator.py  ano_function.py  anon_example.py  anonymizer.py  archive.py  confidentiality_profiles.tsv  config.py  dicom.py  get_tags_diff.py  info.py  save_header.py  tag_lists.py
deidentification/config/: confidentiality_profiles.tsv  safe_private.tsv
deidentification/config/profiles/: cati_collector.tsv  data_sharing.tsv
deidentification/utils/: get_tags_diff.py
packaging/: recipe.yaml  variants.yaml
soma-env/: soma-env-recipe.yaml
tests/: __init__.py  test_ano.py  test_archive.py  test_captures.py  test_config.py
tests/data/archives/not_opening_archives/: not_opening_subject_ex.txt.bz2
tests/data/archives/opening_archives/: opening_subject_ex.txt.bz2  opening_subject_ex.txt.tar
tests/data/captures/: cati_dicom  sop_class_uid_SecondCapture_dicom
tests/data/dicoms/: IM04
tests/data/files/: test_file.json
tests/data/spectro/: 10-001-M03_ws_6_1_raw_act.SDAT  10-001-M03_ws_6_1_raw_act.SPAR
