[project]
name = "deidentification"
version = "1.2.9"
authors = [{ name = "CATI", email = "contact@cati-neuroimaging.com" }]
description = "Python module for DICOM deidentification"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]

dependencies = ["pydicom<3"]

[project.urls]
repository = "https://github.com/cati-neuroimaging/deidentification"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
script-files = ["bin/deidentification"]

[tool.pixi.workspace]
channels = [
    "https://prefix.dev/conda-forge",
]
platforms = ["linux-64"]
preview = ["pixi-build"]

[tool.pixi.pypi-dependencies]
deidentification = { path = ".", editable = true }

[tool.pixi.dependencies]
python = "3.11.*"
pip = "*"
rattler-index = "*"
pydicom = "<3"
pytest = "*"

[tool.pixi.tasks]
test = "pytest"

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "*" }
channels = [
    "https://prefix.dev/pixi-build-backends",
    "https://prefix.dev/conda-forge",
]

[tool.pixi.package.host-dependencies]
pip = "*"
setuptools = "*"

[tool.pixi.package.run-dependencies]
python = "*"
pydicom = "<3"
